--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,1 @@
-VITE_HTTP_API_BASE_ENDPOINT="http://localhost:8000"
-VITE_WEBSOCKET_API_BASE_ENDPOINT="ws://localhost:8000"
+VITE_WS_API_ENDPOINT="ws://localhost:8000"
