--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-location": "^3.3.0",
-    "react-use": "^17.3.1"
+    "react-use": "^17.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
@@ -22,6 +23,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/tailwindcss": "^2.2.4",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.1.0",
     "autoprefixer": "^10.4.0",
     "npm-run-all": "^4.1.5",
